// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`htmlSnippet > dark matches snapshot 1`] = `
"<a href="https://example.github.io/autonomirror/d/?a=711c7e20006ff3e0ac6c1f3063286a0c1a3e4c409642e8c526173fa60bb7078a&amp;n=lucky.jpg&amp;s=312400000" target="_blank" rel="noopener" title="Free to download. Served by the Autonomi network, not this site."
   style="display:inline-flex;align-items:center;gap:8px;padding:10px 16px;border-radius:8px;font:600 15px/1.2 system-ui,-apple-system,'Segoe UI',sans-serif;text-decoration:none;white-space:nowrap;background:#131c32;color:#ffffff;border:1px solid #232a59">
  <span aria-hidden="true" style="color:#97ffa0">⬇</span>
  <span>Download from Autonomi</span>
  <span style="font-weight:400;opacity:.7">· 312 MB</span>
</a>"
`;

exports[`htmlSnippet > light matches snapshot 1`] = `
"<a href="https://example.github.io/autonomirror/d/?a=711c7e20006ff3e0ac6c1f3063286a0c1a3e4c409642e8c526173fa60bb7078a&amp;n=lucky.jpg&amp;s=312400000" target="_blank" rel="noopener" title="Free to download. Served by the Autonomi network, not this site."
   style="display:inline-flex;align-items:center;gap:8px;padding:10px 16px;border-radius:8px;font:600 15px/1.2 system-ui,-apple-system,'Segoe UI',sans-serif;text-decoration:none;white-space:nowrap;background:#ffffff;color:#131c32;border:1px solid #c5cdd7">
  <span aria-hidden="true" style="color:#e91337">⬇</span>
  <span>Download from Autonomi</span>
  <span style="font-weight:400;opacity:.7">· 312 MB</span>
</a>"
`;

exports[`htmlSnippet > minimal matches snapshot 1`] = `"<a href="https://example.github.io/autonomirror/d/?a=711c7e20006ff3e0ac6c1f3063286a0c1a3e4c409642e8c526173fa60bb7078a&amp;n=lucky.jpg&amp;s=312400000" target="_blank" rel="noopener" title="Free to download. Served by the Autonomi network, not this site." style="text-decoration:underline">Download from Autonomi (312 MB)</a>"`;
